# se05x-openssl-provider

./: .gitmodules  CMakeLists.txt  ChangeLog.md  README.md  SCR.txt
provider/: sssProvider_ecdh.c  sssProvider_ecdsa.c  sssProvider_file_store.c  sssProvider_get_capabilities.c  sssProvider_key_mgmt_ec.c  sssProvider_key_mgmt_rsa.c  sssProvider_main.c  sssProvider_main.h  sssProvider_rand.c  sssProvider_rsa.c  sssProvider_rsa_enc.c  sssProvider_store.c
scripts/: openssl_EccCSR.py  openssl_EccGenKey.py  openssl_EccSign.py  openssl_Ecdh.py  openssl_RSA.py  openssl_RsaCSR.py  openssl_RsaEnc.py  openssl_RsaGenKey.py  openssl_rnd.py  openssl_util.py
scripts/input_data/: input_data_32_bytes.txt
